fixed spacing issue

--- a/src/components/productsComponent.css
+++ b/src/components/productsComponent.css
@@ -1,18 +1,24 @@
 .row {
     display: -ms-flexbox; /* IE10 */
+    display: -webkit-flex; /* Safari */
+    display: -moz-flex; /* Firefox */
     display: flex;
     -ms-flex-wrap: wrap; /* IE10 */
     flex-wrap: wrap;
+    justify-content: space-between;
     /* padding: 0 4px; */
 }
 
 /* Create three equal columns that sits next to each other */
 .column {
-  -ms-flex: 33.3%; /* IE10 */
-  flex: 33.3%;
+  -ms-flex: 0 0 30.3%; /* IE10 */
+  -webkit-box-flex: 33.3%; /* Safari */
+  -webkit-flex:0 0 30.3%; /* Safari */
+  -moz-flex: 0 0 30.3%; /* Firefox */
+  flex: 0 0 30.3%;
   max-width: 33.3%;
+  margin-bottom: 2rem;
   /* padding: 0 1rem; */
-  
 }
 
 .column img {
